tests/integration/snapshots/integration__test_json__closed_curly.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
}
stdout --- 
<empty>
stderr --- 
error: expected json value, found `}`
 --> stdin:1:1
  |
1 | }
  | ^
  |
help: consider adding the missing open curly brace
  |
1 | {}
  | +
