tests/integration/snapshots/integration__test_json__object_double_open_curly.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
{{
stdout --- 
<empty>
stderr --- 
error: expected entry or closed delimiter `}`, found `{`
 --> stdin:1:2
  |
1 | {{
  | -^
  | |
  | expected due to `{`
